{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 44,
  "lineage": "08f303ec-da32-9666-314d-4acdc29404d9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "inbound-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-08T20:38:14.012-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/inboud-rules",
            "log_config": [],
            "name": "inboud-rules",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "priority": 1,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/inboud-rules",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "outbound-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-08T20:38:14.567-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-383907/global/firewalls/outbound-rules",
            "log_config": [],
            "name": "outbound-rules",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "priority": 1,
            "project": "terraform-gcp-383907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/firewalls/outbound-rules",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "back-end-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230429",
                    "labels": {
                      "environment": "dev"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/disks/back-end-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-383907/zones/us-central1-a/instances/back-end-01",
            "instance_id": "6058190917632032474",
            "label_fingerprint": "a6HI36FuYIQ=",
            "labels": {
              "environment": "dev"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "environment": "dev"
            },
            "metadata_fingerprint": "mwTByFT3hgI=",
            "name": "back-end-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.136.206.42",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/dev-sub-nw-01",
                "subnetwork_project": "terraform-gcp-383907"
              }
            ],
            "project": "terraform-gcp-383907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/instances/back-end-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "back-end",
              "db"
            ],
            "tags_fingerprint": "yc56gsF2CV4=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.dev-nw-01",
            "google_compute_subnetwork.dev-sub-nw-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "front-end-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230429",
                    "labels": {
                      "environment": "dev"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/disks/front-end-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-383907/zones/us-central1-a/instances/front-end-01",
            "instance_id": "7349202093320994521",
            "label_fingerprint": "a6HI36FuYIQ=",
            "labels": {
              "environment": "dev"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "environment": "dev"
            },
            "metadata_fingerprint": "mwTByFT3hgI=",
            "name": "front-end-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.222.20.15",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/dev-sub-nw-01",
                "subnetwork_project": "terraform-gcp-383907"
              }
            ],
            "project": "terraform-gcp-383907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/zones/us-central1-a/instances/front-end-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "front-end",
              "web"
            ],
            "tags_fingerprint": "guDDTshmL50=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.dev-nw-01",
            "google_compute_subnetwork.dev-sub-nw-01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "dev-nw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "mtu": 1400,
            "name": "dev-nw-01",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "terraform-gcp-383907",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "dev-sub-nw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-08T20:38:14.115-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-gcp-383907/regions/us-central1/subnetworks/dev-sub-nw-01",
            "ip_cidr_range": "10.0.0.0/27",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-sub-nw-01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/global/networks/dev-nw-01",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-383907",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-383907/regions/us-central1/subnetworks/dev-sub-nw-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.dev-nw-01"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}